Finished main.js file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             .main{
                 left: 50%;
             }
+            .btn{
+                left: 50%;
+            }
             .response{
                 left: 50%;
                 top: 50%;
@@ -36,8 +39,12 @@
                 <input id="length" type="number" minlength="1" maxlength="12" value="0">
             </fieldset>
         </div>
+        <div class="btn">
+            <button id="calculate">calculate</button>
+        </div>
         <div class = 'response'>
             <p id="result"></p>
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
